<resources>
    <string name="app_name">Video</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="deleteDialogThumb">DeleteDialogThumb</string>
    <string name="track_selection_title">Tracks</string>
    <string name="backArrow">BackArrow</string>
    <string name="layoutSwitcher">LayoutSwitcher</string>
    <string name="more">more</string>
    <string name="resumeLastPlayed">ResumeLastPlayed</string>
    <string name="brightnessVolumeIcon">BrightnessVolumeIcon</string>
    <string name="shareIon">ShareIon</string>
    <string name="delete_file">Delete File</string>
    <string name="video_information">Video information</string>
    <string name="deleteIcon">DeleteIcon</string>
    <string name="infoIcon">InfoIcon</string>
    <string name="title">Title</string>
    <string name="duration">Duration :</string>
    <string name="size">Size :</string>
    <string name="width">Width :</string>
    <string name="height">Height :</string>
    <string name="videoThumbnail">VideoThumbnail</string>
    <string name="dummyVideoSize50mb">50MB</string>
    <string name="dummyDuration10_12_01">10:12:01</string>
    <string name="dummyVideoTitle">Video Capture in 1942 By Me</string>
    <string name="deleteWaringMassage">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="folderIcon">FolderIcon</string>
    <string name="dummyFolderName">FolderName</string>
    <string name="dummyVideoCount8_videos">8 Videos</string>
    <string name="textDivider">/</string>
    <string name="trackSelectionButton">trackSelectionButton</string>
    <string name="videoFitting">VideoFitting</string>
    <string name="name">Name</string>
    <string name="date_added">Date Added</string>
    <string name="date_modified">Date Modified</string>
    <string name="size_row">Size</string>
    <string name="duration_row">Duration</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="seekbarPreviewImage">SeekbarPreviewImage</string>
    <string name="bitrate">Bitrate :</string>
    <string name="the_beginning">The Beginning</string>
    <string name="subTitleToggleButton">SubTitleToggleButton</string>
    <string name="nightModeButton">NightModeButton</string>
    <string name="playListCloseButton">PlayListCloseButton</string>
    <string name="processbaroverlaybuttontoplay">processbarOverlayButtonToPlay</string>
    <string name="selectAll">SelectAll</string>
    <string name="share">Share</string>
    <string name="folders">Folders</string>
    <string name="videos">Videos</string>
    <string name="play">Play</string>
    <string name="_1_00">1.00</string>
    <string name="negativebutton">NegativeButton</string>
    <string name="positivebutton">PositiveButton</string>
    <string name="okbutton">okButton</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="night_intensity">Night Intensity</string>
    <string name="write_your_message_here">Write Your Message Here</string>
    <string name="send">SEND</string>
    <string name="feedback">FeedBack</string>
    <string name="your_requirements_is_our_goal_write_down_your_requirements">Your Requirements is our Goal. Write down your requirements</string>
    <string name="ytchannellogo">YTChannelLogo</string>
    <string name="selecteditem">selectedItem</string>

</resources>