<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:visible="true" android:menuCategory="container">
        <item
            android:id="@+id/Ascending"
            android:title="@string/ascending" />
        <item
            android:id="@+id/Descending"
            android:title="@string/descending" />
    </group>
    <item
        android:id="@+id/DateAdded"
        android:title="@string/date_added" />
    <item
        android:id="@+id/DateModified"
        android:title="@string/date_modified" />
    <item
        android:id="@+id/Size"
        android:title="@string/size_row" />
    <item
        android:id="@+id/Duration"
        android:title="@string/duration_row" />
    <item
        android:id="@+id/Name"
        android:title="@string/name" />
</menu>