<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/folders"
        android:enabled="true"
        android:icon="@drawable/ic_folder_icon"
        android:title="@string/folders" />
    <item
        android:id="@+id/videos"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_video_library_24"
        android:title="@string/videos" />
    <!--    <item-->
    <!--        android:id="@+id/setting"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/ic_baseline_settings_24"-->
    <!--        android:title="Setting" />-->
    <item
        android:id="@+id/feedback"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_feedback_24"
        android:title="@string/feedback" />
</menu>