<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/folderItemLayout"
    android:clickable="true"
    android:background="?attr/selectableItemBackground"
    android:padding="8dp"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageFolderIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/folderIcon"
        android:src="@drawable/ic_folder_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_marginStart="62dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageFolderIcon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/folderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/not_sans"
            android:maxLines="1"
            android:text="@string/dummyFolderName"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/folderVideoCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/not_sans"
            android:maxLines="1"
            android:text="@string/dummyVideoCount8_videos"
            android:textSize="11sp" />
    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/folderSize"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="11sp"-->
<!--        android:alpha="0.6"-->
<!--        android:fontFamily="@font/not_sans"-->
<!--        android:layout_marginBottom="3dp"-->
<!--        android:layout_marginStart="12dp"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/imageFolderIcon"-->
<!--         />-->
</androidx.constraintlayout.widget.ConstraintLayout>