<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/previewTileLayout"
    android:background="?attr/selectableItemBackground"
    android:layout_width="wrap_content"
    android:padding="3dp"
    android:layout_height="90dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/previewMaterialCard"
        android:layout_width="120dp"
        android:layout_height="70dp"
        app:cardCornerRadius="6dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/videoThumbnail"
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preview_thumbnail_bg"
            android:scaleType="centerCrop"
            tools:ignore="MissingConstraints" />

        <SeekBar
            android:id="@+id/home_preview_seekbar"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:padding="0dp"
            android:layout_gravity="bottom"
            android:progressDrawable="@drawable/home_preview_seekbar_process"
            android:thumb="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/duration_size_bg">

            <TextView
                android:id="@+id/durationV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/not_sans"
                android:paddingStart="4dp"
                android:paddingTop="1dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:text="@string/dummyDuration10_12_01"
                android:textColor="@color/white"
                android:textSize="9sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/titleV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/not_sans"
        android:padding="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:maxWidth="80dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/dummy_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/previewMaterialCard"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
