<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.FolderFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/recentPlayResume"
        android:src="@drawable/ic_play_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/resumeLastPlayed"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/materialToolbarLayoutFolders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/statusBar"
            android:paddingTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_logo_icon" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:alpha="0.8"
                    android:fontFamily="@font/not_sans"
                    android:text="@string/app_name"
                    android:textColor="@color/homePreviewMore"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:fontFamily="@font/not_sans"
                    android:text="@string/the_beginning"
                    android:textColor="@color/homePreviewMore"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/homeScreenMore"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:alpha="0.6"
                    android:contentDescription="@string/more"
                    android:padding="12dp"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/homePreviewMore"
                    tools:ignore="RtlHardcoded" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchFolder"
                    android:background="@color/statusBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:foregroundTintMode="add"
                    android:paddingStart="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/homeScreenMore"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/folderRecView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="3dp"
            tools:listitem="@layout/folder_item" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

